# rusty-multi-flct

./: .gitignore  Cargo.toml  README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
rust-core/: Cargo.toml
rust-core/src/: chunk.rs  destretch.rs  io.rs  lib.rs  vec.rs  vec2.rs
rust-core/src/destretch/: fft.rs  offset.rs
rust-core/test_data/: test_1k_01.fits  test_1k_02.fits  test_1k_03.fits  test_1k_04.fits  test_1k_05.fits  test_1k_06.fits  test_1k_07.fits  test_1k_08.fits  test_1k_09.fits  test_1k_10.fits
